tests/ui/clone.stderr
error[E0277]: the trait bound `NotClone: std::clone::Clone` is not satisfied
 --> $DIR/clone.rs:8:12
  |
8 |     value: NotClone,
  |            ^^^^^^^^ the trait `std::clone::Clone` is not implemented for `NotClone`
  |
  = help: see issue #48214
  = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
